# finance-agent-baseline

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
src/: __init__.py  agent.py  mcp_client.py
